--- a/myntra-frontend/package.json
+++ b/myntra-frontend/package.json
@@ -19,6 +19,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-multi-carousel": "^2.8.5",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.24.1",
     "three": "^0.166.1",
     "three-stdlib": "^2.30.4"
